--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,7 +67,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
